<resources>
    <string name="app_name">FireWall</string>
    <string name="ads_app_id">ca-app-pub-6844059227613516~2373084370</string>
    <string name="banner_ad_unit_id">ca-app-pub-6844059227613516/3057215316</string>
    <string name="font_family_text">sans-serif</string>
    <string name="font_family_button">sans-serif-medium</string>
    <string name="start_vpn">START</string>
    <string name="starting_vpn">STARTING…</string>
    <string name="stop_vpn">STOP</string>
    <string name="stopping_vpn">STOPPING…</string>
    <string name="apps_req_internet_access">some apps request internet</string>
    <string name="allow">ALLOW</string>
    <string name="block">BLOCK</string>
    <string name="rate_app">Rate this app</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="app_list">APPS</string>
    <string name="accept">OK</string>
    <string name="contact">Contact</string>
    <string name="mail">jlab.apps@gmail.com</string>
    <string name="app_mail_not_found">You do not have an email application.</string>
    <string name="about_content"><b>FireWall v1.0</b>, contact to: <i> jlab.apps@gmail.com</i></string>
    <string name="home">HOME</string>
    <string name="started_vpn_service">the FireWall service is running…</string>
    <string name="stopped_vpn_service">the FireWall service is stopped…</string>
    <string name="total">Total</string>
    <string name="speed">Speed</string>
    <string name="app_list_request">ACCESS</string>
    <string name="empty_list">No Elements</string>
    <string name="speed_bps">Speed (Bps)</string>
    <string name="arrow_up">↑</string>
    <string name="arrow_down">↓</string>
    <string name="not_prepared_vpn_service">the FireWall service not is prepared for run</string>
    <string name="not_traffic_bytes">0B</string>
    <string name="search_hint">Search name</string>
    <string name="notified">Notified</string>
    <string name="show_floating_monitor_speed">Show floating speed monitor</string>
    <string name="default_traffic_data_speed">↑0Bps↓0Bps</string>
    <string name="default_traffic_data_total">↑0B↓0B</string>
</resources>