<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/transparent_white_dark">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/llTrafficDataTotal"
                android:visibility="gone">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:textSize="@dimen/traffic_floating_text_size"
                    android:text="@string/total"
                    android:fontFamily="@string/font_family_text"
                    android:textColor="@color/green_bright"/>

                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/tvTrafficDataTotal"
                    android:paddingEnd="5dp"
                    android:paddingStart="0dp"
                    android:textSize="@dimen/traffic_floating_text_size"
                    android:text="@string/default_traffic_data_total"
                    android:fontFamily="@string/font_family_text"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp"
                    android:textSize="@dimen/traffic_floating_text_size"
                    android:text="@string/speed"
                    android:fontFamily="@string/font_family_text"
                    android:textColor="@color/green_bright"/>

            </LinearLayout>

            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tvTrafficDataSpeed"
                android:padding="5dp"
                android:paddingStart="3dp"
                android:paddingEnd="0dp"
                android:textSize="@dimen/traffic_floating_text_size"
                android:text="@string/default_traffic_data_speed"
                android:fontFamily="@string/font_family_text"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>